--- a/src/style/common/index.scss
+++ b/src/style/common/index.scss
@@ -1,54 +1,93 @@
 @import "normalize.css";
 
 /* 样式的重置 */
-body, html, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, header, menu, section, p, input, td, th, ins {
-    padding: 0;
-    margin: 0;
-  }
+body,
+html {
+  height: 100%;
+  width: 100%;
+}
 
-  ul, ol, li {
-    list-style: none;
-  }
+body,
+html,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+dl,
+dt,
+dd,
+header,
+menu,
+section,
+p,
+input,
+td,
+th,
+ins {
+  padding: 0;
+  margin: 0;
 
-  a {
-    text-decoration: none;
-    color: #666;
-  }
+}
 
-  a:hover {
-    color: #666;
-    text-decoration: underline;
-  }
+ul,
+ol,
+li {
+  list-style: none;
+}
 
-  i, em {
-    font-style: normal;
-  }
+a {
+  text-decoration: none;
+  color: #666;
+}
 
-  input, textarea, button, select, a {
-    outline: none;
-    border: none;
-  }
+a:hover {
+  color: #666;
+  text-decoration: underline;
+}
 
-  table {
-    border-collapse: collapse;
-    border-spacing: 0;
-  }
+i,
+em {
+  font-style: normal;
+}
 
-  img {
-    border: none;
-    vertical-align: middle;
-  }
+input,
+textarea,
+button,
+select,
+a {
+  outline: none;
+  border: none;
+}
 
-  /* 全局样式 */
-  body, textarea, select, input, button {
-    font-size: 12px;
-    color: #333;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f5f5f5;
-  }
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
-  .text-nowrap {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-  }
+img {
+  border: none;
+  vertical-align: middle;
+}
+
+/* 全局样式 */
+body,
+textarea,
+select,
+input,
+button {
+  font-size: 12px;
+  color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f5f5f5;
+}
+
+.text-nowrap {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
