--- a/src/view/LoginAndRegister/index.scss
+++ b/src/view/LoginAndRegister/index.scss
@@ -133,6 +133,12 @@
     }
   }
 
+  .verify {
+    padding: 10px 0 0 10px;
+    display: flex;
+    justify-content: flex-end;
+  }
+
   .btn {
     width: 100%;
     height: 50px;
